# TransformerQEC

./: .gitattributes  .gitignore  01_data_exploration.ipynb  02_model_and_training.ipynb  03_evaluation.ipynb  DEEP_RESEARCH_FIX_SUGGS.md  GEMINI.md  PLAN.md  PUBLICATION_GUIDE.md  README.md  RESEARCH_SOURCE.md  STATE.md  migration.md  pyproject.toml  requirements.txt  research_symmetries.py
.claude/: settings.local.json
configs/baseline/: current.yaml
configs/experiments/: rope_ratio_1_1.yaml  rope_ratio_3_1.yaml
configs/laptop/: d3-smoke.yaml
docs/: architecture.md  baseline-reproduction.md  research-benchmark-contract.md  research-landscape.md
notebooks/: 01_data_exploration.ipynb  02_model_and_training.ipynb  03_evaluation.ipynb  README.md  model.py  research_readyness.md
notebooks/archive/: 01_data_exploration.ipynb  03_evaluation.ipynb
results/: evaluation_results.csv  log_log_regression_transformer_ler.html  threshold_estimates.txt  transformer_qec_d3.pkl  transformer_qec_d5.pkl  transformer_qec_d7.pkl
results/baseline/: manifest.json
scripts/: _common.py  baseline_model.py  bless_baseline.py  checkpoint.py  evaluate.py  extract_checkpoints.py  extract_eval_results.py  train.py
src/transformerqec/: __init__.py  cli.py
tests/: test_equivariance.py  test_notebooks_compat.py
tests/integration/: test_benchmark_smoke.py  test_dataset_sampling.py  test_research_registry.py  test_training_smoke.py
tests/regression/: test_baseline_manifest.py  test_checkpoint_contract.py  test_legacy_checkpoint_forward.py  test_results_contract.py
(+38 files in other folders)
