[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformerqec"
version = "0.1.0"
description = "Reusable decoder library extracted from the TransformerQEC notebooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flax>=0.10",
  "jax>=0.7",
  "matplotlib>=3.9",
  "numpy>=2.1",
  "optax>=0.2",
  "pymatching>=2.3",
  "pyyaml>=6.0",
  "stim>=1.14",
  "typer>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.11", "nbformat>=5.10"]

[project.scripts]
transformerqec = "transformerqec.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
